Major compatibility update.
Added Ars Nouveau school tooltip compatibility.
Fixed overlapping tooltips rendering improperly.
Tooltip borders are now automatically disabled for modded items that
mimic Legendary Tooltips functionality.
Fixed tooltip spacing on tooltips with a 3D item preview.
Compact tooltips option now compacts tooltips more reliably.
Fixed title centering being off for tooltips with multiple title lines
and a 3D item preview.
Fixed incorrect vertical alignment on tooltips with multiple title
lines.
Fixed tooltips sometimes rendering incorrectly on modded screens
provided by Titanium library.
Improved compatibility with other mods that alter tooltip colors.
Added a new configuration option to display name separators on all
tooltips, instead of just item tooltips (enabled by default).
Experimental: Added tooltip scrolling and tooltip max size options.
(disabled by default)